# Symptomedic

./: README.md
mobile/: flutter_launcher_icons.yaml  pubspec.yaml
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/lib/: main.dart  utils.dart
mobile/lib/screens/: chat.dart  home.dart  landing.dart  signup.dart
server/: .gitignore  Dockerfile  app.py  docker-compose.yml  pyproject.toml
server/routes/: chat.py  signin.py  signup.py
server/templates/: index.html
server/utils/: load_data.py
