[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Abhijna-Raghavendra <a_raghavendra@ma.iitr.ac.in>"]
readme = "README.md"
package-mode=false 

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
langchain = "^0.2.4"
requests = "^2.32.3"
pymongo = "^4.7.3"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"
ctransformers = "^0.2.27"
langchain-core = "^0.2.7"
langchain-community = "^0.2.5"
pypdf = "^4.2.0"
sentence-transformers = "^3.0.1"
werkzeug = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
